<resources>
    <string name="app_name">RestaurantApp</string>
    <string name="review_order">Review Order</string>
    <string name="show_more"><u>Show more</u></string>
    <string name="add">Add</string>
    <string name="menu">Menu</string>
    <string name="starter">Starter</string>
    <string name="place_order">Place Order</string>
    <string name="total_cost">Total Cost</string>

    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="restuarant_image">Restuarant Image</string>
    <string name="inka_restaurant">Inka Restaurant</string>
    <string name="_5_0_200_all_days_09_00_am_06_00_pm">5.0(200+)| All days : 09:00 AM -06:00 PM</string>
    <string name="reach_us_at_1234567890">Reach us at : 1234567890</string>
    <string name="book_a_table">Book a Table</string>
    <string name="upload_button">Upload Button</string>
    <string name="information_button">Information Button</string>
    <string name="back_button">Back Button</string>
</resources>
